--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.movie-container
+{
+  width: 340px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.movie-poster
+{
+  width: 340px;height:500px ;object-fit: cover;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.movie-spec
+{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;justify-content: space-between;
 }
-
-.App-link {
-  color: #61dafb;
+.movie-name
+{
+  font-size: 24px;margin: 0;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.movie-summary
+{
+  margin-top: 0%;
+}
+.movie-list
+{
+  display: flex;
+ flex-wrap: wrap;justify-content: space-around;gap: 10px;
+ margin-top: 20px;
+}
+.movie-end
+{
+  display: flex;align-items: center;
+  justify-content: space-around;
 }
